--- a/app/src/main/res/raw/ofl_bangers.html
+++ b/app/src/main/res/raw/ofl_bangers.html
@@ -1,4 +1,3 @@
-<body>
 Copyright (c) 2010 by vernon adams (vern@newtypography.co.uk),
 with Reserved Font Name Bangers.
 This Font Software is licensed under the SIL Open Font License, Version 1.1.
@@ -19,7 +18,6 @@ http://scripts.sil.org/OFL
     efforts of academic and linguistic communities, and to provide a free and
     open framework in which fonts may be shared and improved in partnership
     with others.</p>
-<br/>
 
 <p>The OFL allows the licensed fonts to be used, studied, modified and
     redistributed freely as long as they are not sold by themselves. The
@@ -29,39 +27,33 @@ http://scripts.sil.org/OFL
     however, cannot be released under any other type of license. The
     requirement for fonts to remain under this license does not apply
     to any document created using the fonts or their derivatives.</p>
-<br/>
 
 <h3>DEFINITIONS</h3>
 
 <p>"Font Software" refers to the set of files released by the Copyright
     Holder(s) under this license and clearly marked as such. This may
     include source files, build scripts and documentation.</p>
-<br/>
 
 <p>"Reserved Font Name" refers to any names specified as such after the
     copyright statement(s).</p>
-<br/>
 
 <p>"Original Version" refers to the collection of Font Software components as
     distributed by the Copyright Holder(s).</p>
-<br/>
 
 <p>"Modified Version" refers to any derivative made by adding to, deleting,
     or substituting -- in part or in whole -- any of the components of the
     Original Version, by changing formats or by porting the Font Software to a
     new environment.</p>
-<br/>
 
 <p>"Author" refers to any designer, engineer, programmer, technical
     writer or other person who contributed to the Font Software.</p>
-<br/>
 
 <h3>PERMISSION &amp; CONDITIONS</h3>
 
 <p>Permission is hereby granted, free of charge, to any person obtaining
     a copy of the Font Software, to use, study, copy, merge, embed, modify,
     redistribute, and sell modified and unmodified copies of the Font
-    Software, subject to the following conditions:
+    Software, subject to the following conditions:</p>
 <ol>
     <li>Neither the Font Software nor any of its individual components,
         in Original or Modified Versions, may be sold by itself.
@@ -95,16 +87,14 @@ http://scripts.sil.org/OFL
         using the Font Software.
     </li>
 </ol>
-<br/>
 
 <h3>TERMINATION</h3>
 
 <p>This license becomes null and void if any of the above conditions are
     not met.</p>
-<br/>
 
 <h3>DISCLAIMER</h3>
-<b>THE FONT SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+<p><b>THE FONT SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
     EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO ANY WARRANTIES OF
     MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT
     OF COPYRIGHT, PATENT, TRADEMARK, OR OTHER RIGHT. IN NO EVENT SHALL THE
@@ -112,5 +102,4 @@ http://scripts.sil.org/OFL
     INCLUDING ANY GENERAL, SPECIAL, INDIRECT, INCIDENTAL, OR CONSEQUENTIAL
     DAMAGES, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
     FROM, OUT OF THE USE OR INABILITY TO USE THE FONT SOFTWARE OR FROM
-    OTHER DEALINGS IN THE FONT SOFTWARE.</b>
-</body>
+    OTHER DEALINGS IN THE FONT SOFTWARE.</b></p>
